tests/ui/const-generics/generic_const_exprs/issue-109141.stderr
error[E0425]: cannot find value `HashesEntryLEN` in this scope
  --> $DIR/issue-109141.rs:10:32
   |
LL | struct EntriesBuffer(Box<[[u8; HashesEntryLEN]; 5]>);
   |                                ^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
